// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /profile/:username endpoint Success 1`] = `
{
  "id": "675351d698452e4fadc376be",
  "isFollowing": false,
  "name": "hi there",
  "numFollowers": 1,
  "numFollowing": 0,
  "username": "username",
}
`;

exports[`GET /profile/:username endpoint Success isFollowing 1`] = `
{
  "id": "675351d698452e4fadc376be",
  "isFollowing": true,
  "name": "hi there",
  "numFollowers": 1,
  "numFollowing": 0,
  "username": "username",
}
`;
